<resources>
    <string name="app_name">LazApp</string>
    <string name="laz_mall">LazMall</string>
    <string name="laz_market">Siêu thị Lazada</string>
    <string name="laz_sale">Mã Giảm Giá</string>
    <string name="laz_list">Danh Mục</string>
    <string name="laz_card_voucher">Nạp Thẻ - eVoucher</string>
    <string name="more">Xem thêm ></string>
    <string name="search_common">Tìm kiếm phổ biến</string>
    <string name="trending_line1">Top Lazada</string>
    <string name="trending_line2">Top đề xuất</string>
    <string name="for_you">Dành riêng cho bạn</string>
    <string name="VND"> đ</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Quên mật khẩu?</string>
</resources>