<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/lazmall"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/laz_mall"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/laz_mall"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lazgrocerise"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintStart_toEndOf="@+id/lazmall"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/laz_groceries"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/laz_market"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lazpromo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintStart_toEndOf="@+id/lazgrocerise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/laz_promo"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/laz_sale"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lazcategory"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintStart_toEndOf="@+id/lazpromo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/laz_category"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/laz_list"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lazcard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintStart_toEndOf="@+id/lazcategory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/laz_game"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/laz_card_voucher"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>